styles.css
/* CSS RESET */

/* Box sizing rules */
*, *::before, *::after {
  box-sizing: border-box;
}
/* Remove default margin */
body, h1, h2, h3, h4, p, figure, blockquote, dl, dd {
  margin: 0;
}
/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'], ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}
/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}
/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}
/* Make images easier to work with */
img, picture {
  max-width: 100%;
  display: block;
}
/* Inherit fonts for inputs and buttons */
input, button, textarea, select {
  font: inherit;
}
/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }
    *, *::before, *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}
.bblue {
  border: 2px solid blue;
}
/* Personal CSS */
body {
  font-family: "Cabin", sans-serif;
}
.fC {
  color: #5a5444;
}
#bannerWrapper, #footerWrapper {
  background-color: black;
  color: white;
}
nav div a, #navMid li a, #navRight li a {
  color: black;
  text-decoration: none;
}
.checkMarks {
  max-width: 25px;
}
#email {
  border-radius: 5px;
}
#emailCont {
  display: flex;
  height: auto;
  text-align: center; 
  width: auto;
}
#escrowCont {
  background-color: #f0eeeb;
  border-radius: 5px;
}
#footerWrapper {
  margin-bottom: 0px;
  padding-bottom: 9px;
}
#footCont li a {
  color: white;
  text-decoration: none;
}
#footerOne {
  padding: 20px 100px 20px 100px;
}
.greyBack {
  background-color: #f0eeeb;
}
li {
  list-style-type: none;
}
.nav-item a {
  color: black;
  justify-content: end;
}
#smallHero {
  display: none;
}
#tEditorRightInner {
  display: flex;
  flex-direction: column;
  
}
#tEditorRightInner h2, #tEditorRightInner p {
  padding: 15px 0px;
}
#escrowLeftCont {
  display: flex;
  justify-content: center;
  align-content: center;
}
#escrowLeft {
  width: 50%;
  padding: 50px;
  justify-items: center;
  align-items: center;
}
#escrowLeftCont h2, #escrowLeftCont p {
  padding: 15px 0px;
}

